# genertic

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
_cmake/: coverage.cmake
actor/: CMakeLists.txt
actor/include/: actor.hpp  genom.hpp  operation.hpp
actor/src/: actor.cpp  genom.cpp  operation.cpp
actor/test/: CMakeLists.txt  actor_test.cpp  bool_test.cpp  expression_test.cpp  if_test.cpp
actor/test/common/: common.cpp  common.hpp
scripts/: build.sh  coverage.sh
unit/: CMakeLists.txt
unit/include/: IUnit.hpp  genom.hpp  operation.hpp  unit.hpp
unit/src/: IUnit.cpp  genom.cpp  operation.cpp  unit.cpp
unit/test/: CMakeLists.txt  boolTest.cpp  expressionTest.cpp  unittest.cpp
unit/test/common/: common.cpp  common.hpp
world/: CMakeLists.txt
world/include/: world.hpp
world/src/: world.cpp
